<resources>
    <string name="app_name">Roast Assistant 1</string>
    <string name="roast_start_time">0</string>
    <string name="string_button_start_roast">Start Roast</string>
    <string name="string_button_end_roast">End Roast</string>
    <string name="button_first_crack">1ST CRACK</string>
    <string name="string_button_record_temp">Record Temp</string>
    <string name="zero_percent">0%</string>
    <string name="string_25_percent">25%</string>
    <string name="string_50_percent">50%</string>
    <string name="string_75_percent">75%</string>
    <string name="string_100_percent">100%</string>
    <string name="string_start_temperature">68°</string>
    <string name="label_current_temperature">Current Temperature</string>
    <string name="string_label_power">Power</string>
    <string name="string_chronometer">0</string>
    <string name="text_new_roast">New roast</string>
    <string name="string_roast_started_message">Roast started.</string>
    <string name="string_roast_ended_message">Roast ended.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="string_coming_soon">Coming Soon!</string>
    <string name="string_temperature_check_frequency_setting_summary">Enter the desired number of seconds between temperature check prompts.</string>
    <string name="string_allowed_temp_change_setting_summary">Enter the maximum allowed temperature change between readings. This is useful for increasing voice recognition accuracy.</string>
    <string name="string_starting_temp_setting_summary">Enter the default starting temperature for your roast. This could be the ambient temperature or the pre-heat temperature. You will also be able to change this value right before you start the roast.</string>
    <string name="string_starting_power_setting_summary">Enter the default starting power for your roast. You will also be able to change this value right before you start the roast.</string>
    <string name="string_roast_time_addend_summary">When you have a roaster that coasts after the roast ends, it can be helpful think ahead by some amount of time. Enter that amount here in seconds.</string>
    <string name="string_graph_label_temperature">Temperature</string>
    <string name="string_first_crack_lookahead_time_summary">Enter the number of seconds to look forward in time for the small first crack percentage display. This can be useful if you have a roaster that continues to roast after stopping the roast due to in-roaster cooling. Enter 0 to hide the lookahead display.</string>
</resources>