<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".MainActivity">-->
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RoastFragment"
    android:orientation="vertical"
    android:gravity="top|center">

    <Chronometer
        android:id="@+id/chrono_roast_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_chronometer"
        android:textSize="25sp"
        android:layout_margin="8dp"
        />

    <TextView
        android:id="@+id/text_current_temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/string_start_temperature"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_1c_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:text="0:00"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/text_1c_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:text="0°" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radio_group_powers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_curr_power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_label_power" />

        <RadioButton
            android:id="@+id/radio_button_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zero_percent"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="506dp" />

        <RadioButton
            android:id="@+id/radio_button_25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_25_percent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="473dp" />

        <RadioButton
            android:id="@+id/radio_button_50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_50_percent"
            tools:layout_editor_absoluteX="155dp"
            tools:layout_editor_absoluteY="519dp" />

        <RadioButton
            android:id="@+id/radio_button_75"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_75_percent"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="575dp" />

        <RadioButton
            android:id="@+id/radio_button_100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_100_percent"
            tools:layout_editor_absoluteX="149dp"
            tools:layout_editor_absoluteY="615dp" />
    </RadioGroup>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle"
        android:layout_margin="8dp"
        >

        <Button
            android:id="@+id/button_start_end_roast"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_button_start_roast" />

        <Button
            android:id="@+id/button_charge_temperature"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Set Charge Temperature" />

        <Button
            android:id="@+id/button_first_crack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_first_crack"
            android:visibility="gone"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/button_record_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_button_record_temp"
            android:visibility="gone"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>