<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

<!--    SETTINGS TO ADD.........-->

    <EditTextPreference
        android:dialogMessage="@string/string_temperature_check_frequency_setting_summary"
        android:summary="@string/string_temperature_check_frequency_setting_summary"
        app:key="temperature_check_frequency"
        app:title="Temperature check frequency"
        app:useSimpleSummaryProvider="true"
        android:defaultValue="60" />

    <EditTextPreference
        android:dialogMessage="@string/string_allowed_temp_change_setting_summary"
        android:summary="@string/string_allowed_temp_change_setting_summary"
        app:key="allowed_temp_change"
        app:title="Allowed temperature change"
        app:useSimpleSummaryProvider="true"
        android:defaultValue="50" />

    <EditTextPreference
        android:dialogMessage="@string/string_starting_temp_setting_summary"
        android:summary="@string/string_starting_temp_setting_summary"
        app:key="starting_temperature"
        app:title="Roast starting temperature"
        app:useSimpleSummaryProvider="true"
        android:defaultValue="68" />

    <!--    final int mStartingPower = 0; // need to set the widget too-->
    <EditTextPreference
        android:dialogMessage="@string/string_starting_power_setting_summary"
        android:summary="@string/string_starting_power_setting_summary"
        app:key="starting_power"
        app:title="Roast starting power"
        app:useSimpleSummaryProvider="true"
        android:defaultValue="100" />



    <!--    <PreferenceCategory app:title="@string/messages_header">-->

<!--        <EditTextPreference-->
<!--            app:key="signature"-->
<!--            app:title="@string/signature_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

<!--        <ListPreference-->
<!--            app:defaultValue="reply"-->
<!--            app:entries="@array/reply_entries"-->
<!--            app:entryValues="@array/reply_values"-->
<!--            app:key="reply"-->
<!--            app:title="@string/reply_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

<!--    </PreferenceCategory>-->

<!--    <PreferenceCategory app:title="@string/sync_header">-->

<!--        <SwitchPreferenceCompat-->
<!--            app:key="sync"-->
<!--            app:title="@string/sync_title" />-->

<!--        <SwitchPreferenceCompat-->
<!--            app:dependency="sync"-->
<!--            app:key="attachment"-->
<!--            app:summaryOff="@string/attachment_summary_off"-->
<!--            app:summaryOn="@string/attachment_summary_on"-->
<!--            app:title="@string/attachment_title" />-->

<!--    </PreferenceCategory>-->

</PreferenceScreen>